# ghm-composer-prod

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy_dags.yaml
config/: pipelines.yaml
dags/: dag_generator.py  test_connection.py  teste_conexao.py
dags/config/: pipelines.yaml
dags/utils/: __init__.py  dag_factory.py  sql_helpers.py  task_templates.py  yaml_loader.py
scripts/: create_pipeline.sh  validate_pipelines.py
sql/: bronze_tb_medico.sql
terraform/: .terraform.lock.hcl  main.tf  terraform.tfstate  terraform.tfstate.backup
utils/: __init__.py  config.py  config_examples.py  dag_factory.py  sql_helpers.py  task_templates.py  yaml_loader.py
