[project]
name = "ghm-composer-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow==2.10.2",
    "apache-airflow-providers-google>=19.0.0",
    "oracledb>=3.4.1",
    "pandas>=2.3.3",
    "pandas-gbq>=0.31.0",
    "pyyaml>=6.0.3",
]
